# Brainy

./: .gitignore  .prettierignore  .tmuxinator.yml  README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  shell.nix  tsconfig.json  updater.json  vite.config.ts
.github/workflows/: build_and_test.yml  publish.yml
src/: constants.ts  index.css  main.tsx  store.ts  tauri.d.ts
src-tauri/: .gitignore  Cargo.toml  relic.conf  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  migration.rs
src-tauri/src/api/: cell_api.rs  export_import_api.rs  file_api.rs  mod.rs  repetition_api.rs  review_api.rs  search_api.rs  settings_api.rs  user_file_api.rs
src-tauri/src/apis/: cell_api.rs  file_api.rs  mod.rs  repetition_api.rs  settings_api.rs  user_file_api.rs
src-tauri/src/commands/: mod.rs  user_file_commands.rs
src-tauri/src/dto/: exported_item.rs  file_with_repetitions_count.rs  file_with_repetitions_count_dto.rs  home_statistics.rs  mod.rs  review_statistics.rs  search_result.rs  update_cell_request.rs  update_settings_dto.rs
src-tauri/src/entities/: cell.rs  mod.rs  repetition.rs  user_file.rs
src-tauri/src/entity/: cell.rs  file.rs  mod.rs  repetition.rs  review.rs  user_file.rs
src-tauri/src/model/: file_repetitions_count.rs  flash_card.rs  mod.rs  settings.rs  true_false.rs
src-tauri/src/models/: file_repetitions_count.rs  file_with_repetitions_count.rs  mod.rs  settings.rs  update_settings_request.rs  user_file_with_repetitions_count.rs
src-tauri/src/repositories/: cell_repository.rs  file_repository.rs  mod.rs  repetition_repository.rs  user_file_repository.rs
src-tauri/src/service/: cell_service.rs  cell_services.rs  export_import_service.rs  file_service.rs  mod.rs  repetition_service.rs  review_service.rs  search_service.rs  settings_service.rs  user_file_service.rs
src-tauri/src/services/: cell_service.rs  file_service.rs  mod.rs  repetition_service.rs  settings_service.rs  user_file_service.rs
src-tauri/src/util/: database_util.rs  mod.rs
src/api/: cellApi.ts  exportImportApi.ts  fileApi.ts  repetitionApi.ts  reviewApi.ts  searchApi.ts  settingsApi.ts
src/entities/: cell.ts  file.ts  fileRepetitionCounts.ts  fileWithRepetitionCounts.ts  repetition.ts  userFile.ts  userFileEntity.ts
src/hooks/: useAppDispatch.ts  useAppSelector.ts  useBeforeUnload.ts  useGlobalKey.ts  useOutsideClick.ts
src/service/: cellService.ts
src/services/: backendApi.ts  cellService.ts  fileService.ts  repetitionService.ts  settingsService.ts
src/store/: store.ts
src/type/: fromRouteState.ts  parsedFile.ts  parsedFolder.ts
src/types/: File.ts  Folder.ts  file.ts  flashCard.ts  folder.ts  parsedFile.ts  parsedFolder.ts  uiFile.ts  uiFolder.ts
src/ui/: RenderIfVisible.tsx
src/util/: applySettings.ts  createCardFromRepetition.ts  createDefaultCell.ts  createRepetitionFromCard.ts  errorToString.ts  getCellIcon.ts  getFilOrFolderById.ts  getFileName.ts  getFolderChildById.ts  gradeToRating.ts  isSystemUsingDarkMode.ts  parseGetFilesResponse.ts  searchFolder.ts  secondsToLongString.ts
src/utils/: applyNewName.ts  createCardFromCellRepetitionDto.ts  createCardFromRepetition.ts  createDefaultCell.ts  createRepetitionFromCard.ts  durationToString.ts  getCellIcon.ts  getErrorFromAxiosResponse.ts  getFilOrFolderById.ts  getFileName.ts  getFolderPath.ts  parseGetFilesResponse.ts  parseListUserFilesResponse.ts  renameFile.ts  searchFolder.ts
(+199 files in other folders)
