[package]
name = "brainy-app"
version = "0.1.0"
description = "Brainy"
authors = ["Rami Alkawadri"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "brainy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["test"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
sea-orm = { version = "1.1.1", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
async-trait = "0.1.83"
chrono = "0.4.39"
tauri-plugin-dialog = "2.2.0"
dirs = "5.0.1"

[dev-dependencies]
mockall = "0.13.1"
