[package]
name = "Brainy"
version = "0.1.0"
description = "Brainy"
authors = ["Rami Alkawadri"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "brainy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = ["test"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
sea-orm = { version = "1.1.5", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
chrono = "0.4.39"
tauri-plugin-dialog = "2.2.0"
dirs = "6.0.0"
regex = "1.11.1"
rand_chacha = "0.9.0"
rand = "0.9.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
