[package]
name = "Brainy"
version = "0.1.0"
description = "Brainy"
authors = ["Rami Alkawadri"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "brainy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = ["test"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
sea-orm = { version = "1.1.7", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
chrono = "0.4.40"
tauri-plugin-dialog = "2.2.0"
dirs = "6.0.0"
regex = "1.11.1"
rand_chacha = "0.9.0"
rand = "0.9.0"
tauri-plugin-opener = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.2.2"
tauri-plugin-window-state = "2.2.1"
